Fix bug where text wraps in tablets when there is whitespace.

--- a/src/stylesheets/_phone.scss
+++ b/src/stylesheets/_phone.scss
@@ -134,6 +134,7 @@ Clean up media queries by moving all similar CSS to a mixin file.
       display: flex;
       align-items: center;
       justify-content: center;
+      white-space: nowrap;
       font-size: 0.825rem;
       font-weight: 700;
       color: $desaturated-dark-cyan;
@@ -183,6 +184,7 @@ Clean up media queries by moving all similar CSS to a mixin file.
           display: flex;
           align-items: center;
           justify-content: center;
+          white-space: nowrap;
           font-size: 0.825rem;
           font-weight: 700;
           padding: 7.3px;
