--- a/src/stylesheets/_tab_land.scss
+++ b/src/stylesheets/_tab_land.scss
@@ -57,6 +57,7 @@ Clean up media queries by moving all similar CSS to a mixin file.
           display: flex;
           align-items: center;
           justify-content: center;
+          white-space: nowrap;
           font-size: 1.1rem;
           font-weight: 700;
           padding: 9.5px;
@@ -208,6 +209,7 @@ Clean up media queries by moving all similar CSS to a mixin file.
       display: flex;
       align-items: center;
       justify-content: center;
+      white-space: nowrap;
       font-size: 1.1rem;
       font-weight: 700;
       color: $desaturated-dark-cyan;
